// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly image 1`] = `
<div
  className="dimension-panel"
>
  <div
    className="dimension-container"
    key="x"
  >
    <div
      className="label"
    >
      X
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="x_position"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="y"
  >
    <div
      className="label"
    >
      Y
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="y_position"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="rot"
  >
    <div
      className="label img"
    >
      <img
        alt=""
        src="img/right-panel/icon-rotate.svg"
      />
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="rotate"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="deg"
    />
  </div>
  <div
    className="dimension-container"
    key="w"
  >
    <div
      className="label"
    >
      W
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={108}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="width"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="h"
  >
    <div
      className="label"
    >
      H
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={152.6}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="height"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-lock"
    key="lock"
    onClick={[Function]}
  >
    <img
      alt=""
      src="img/right-panel/icon-lock.svg"
    />
  </div>
  <div
    className="flip-btn-container"
  >
    <div
      className="tool-btn"
      id="horizontal_flip"
      onClick={[Function]}
      title="Horizontal Flip"
    >
      <img
        alt=""
        src="img/right-panel/icon-hflip.svg"
      />
    </div>
    <div
      className="tool-btn"
      id="vertical_flip"
      onClick={[Function]}
      title="Vertical Flip"
    >
      <img
        alt=""
        src="img/right-panel/icon-vflip.svg"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile image 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelNumber
    id="width"
    label="W"
    updateValue={[Function]}
    value={108}
  />
  <ObjectPanelItem
    content={
      <AntdIcon
        component="svgr-url"
      />
    }
    id="lock"
    onClick={[Function]}
  />
  <ObjectPanelNumber
    id="height"
    label="H"
    updateValue={[Function]}
    value={152.6}
  />
  <ObjectPanelNumber
    id="rotate"
    label="Rotate"
    unit="degree"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="x_position"
    label="X"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="y_position"
    label="Y"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelActionList
    actions={
      [
        {
          "icon": <AntdIcon
            component="svgr-url"
          />,
          "label": "Horizontal Flip",
          "onClick": [Function],
        },
        {
          "icon": <AntdIcon
            component="svgr-url"
            rotate={90}
          />,
          "label": "Vertical Flip",
          "onClick": [Function],
        },
      ]
    }
    content={<svgr-url />}
    id="flip"
    label="flip"
  />
</div>
`;

exports[`should render correctly in mobile no elements 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelNumber
    id="x_position"
    label="X"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="y_position"
    label="Y"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="rotate"
    label="Rotate"
    unit="degree"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="width"
    label="W"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="height"
    label="H"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelActionList
    actions={
      [
        {
          "icon": <AntdIcon
            component="svgr-url"
          />,
          "label": "Horizontal Flip",
          "onClick": [Function],
        },
        {
          "icon": <AntdIcon
            component="svgr-url"
            rotate={90}
          />,
          "label": "Vertical Flip",
          "onClick": [Function],
        },
      ]
    }
    content={<svgr-url />}
    id="flip"
    label="flip"
  />
</div>
`;

exports[`should render correctly in mobile unsupported element 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelNumber
    id="x_position"
    label="X"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="y_position"
    label="Y"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="rotate"
    label="Rotate"
    unit="degree"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="width"
    label="W"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelNumber
    id="height"
    label="H"
    updateValue={[Function]}
    value={0}
  />
  <ObjectPanelActionList
    actions={
      [
        {
          "icon": <AntdIcon
            component="svgr-url"
          />,
          "label": "Horizontal Flip",
          "onClick": [Function],
        },
        {
          "icon": <AntdIcon
            component="svgr-url"
            rotate={90}
          />,
          "label": "Vertical Flip",
          "onClick": [Function],
        },
      ]
    }
    content={<svgr-url />}
    id="flip"
    label="flip"
  />
</div>
`;

exports[`should render correctly no elements 1`] = `
<div
  className="dimension-panel"
>
  <div
    className="dimension-container"
    key="x"
  >
    <div
      className="label"
    >
      X
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="x_position"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="y"
  >
    <div
      className="label"
    >
      Y
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="y_position"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="rot"
  >
    <div
      className="label img"
    >
      <img
        alt=""
        src="img/right-panel/icon-rotate.svg"
      />
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="rotate"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="deg"
    />
  </div>
  <div
    className="dimension-container"
    key="w"
  >
    <div
      className="label"
    >
      W
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="width"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="h"
  >
    <div
      className="label"
    >
      H
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="height"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="flip-btn-container"
  >
    <div
      className="tool-btn"
      id="horizontal_flip"
      onClick={[Function]}
      title="Horizontal Flip"
    >
      <img
        alt=""
        src="img/right-panel/icon-hflip.svg"
      />
    </div>
    <div
      className="tool-btn"
      id="vertical_flip"
      onClick={[Function]}
      title="Vertical Flip"
    >
      <img
        alt=""
        src="img/right-panel/icon-vflip.svg"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly unsupported element 1`] = `
<div
  className="dimension-panel"
>
  <div
    className="dimension-container"
    key="x"
  >
    <div
      className="label"
    >
      X
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="x_position"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="y"
  >
    <div
      className="label"
    >
      Y
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="y_position"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="rot"
  >
    <div
      className="label img"
    >
      <img
        alt=""
        src="img/right-panel/icon-rotate.svg"
      />
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="rotate"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="deg"
    />
  </div>
  <div
    className="dimension-container"
    key="w"
  >
    <div
      className="label"
    >
      W
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="width"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="dimension-container"
    key="h"
  >
    <div
      className="label"
    >
      H
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "dimension-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      id="height"
      isDoOnInput={false}
      max={9007199254740991}
      min={-9007199254740991}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <div
    className="flip-btn-container"
  >
    <div
      className="tool-btn"
      id="horizontal_flip"
      onClick={[Function]}
      title="Horizontal Flip"
    >
      <img
        alt=""
        src="img/right-panel/icon-hflip.svg"
      />
    </div>
    <div
      className="tool-btn"
      id="vertical_flip"
      onClick={[Function]}
      title="Vertical Flip"
    >
      <img
        alt=""
        src="img/right-panel/icon-vflip.svg"
      />
    </div>
  </div>
</div>
`;
